updated README and additional cleanup

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -5,7 +5,7 @@
 # (openCL will also work with CPU in needed)
 #
 # Requirements:
-# - Java8 (64bit recommend to use more memory)
+# - Java8 (64bit recommend to use more memory) DO NOT USE Java9!
 # - openCL
 #
 # PLEASE DONATE
@@ -46,11 +46,11 @@ listPlotFiles=
 # -----------------------------------------------------------------------------------
 # - MINING MODE AND TARGET DEADLINE -------------------------------------------------
 # -----------------------------------------------------------------------------------
-# poolMining             - 'true' for pool mining, 'false' for solo mining.
-# (default:true)            ensure to configure the chosen mining-mode below.
+# poolMining               - 'true' for pool mining, 'false' for solo mining.
+# (default:true)             ensure to configure the chosen mining-mode below.
 #
-# targetDeadline          - min. deadline to be committed. e.g. 750000 for solo mining.
-# (optinal)                 will be used for pool mining if 'forceLocalTargetDeadline=true'
+# targetDeadline           - min. deadline to be committed. e.g. 750000 for solo mining.
+# (optinal)                  will be used for pool mining if 'forceLocalTargetDeadline=true'
 #
 # forceLocalTargetDeadline - 'true' will force jminer to use the targetDeadline specified below, 
 # (default:false)            even if the pool says otherwise.  Only for pool mining! 'false' uses the default behavior for targetDeadline.
@@ -58,7 +58,7 @@ listPlotFiles=
 #
 # dynamicTargetDeadline    - 'true' will overrule 'targetDeadline' and 'forceLocalTargetDeadline' settings.
 # (default:false)            the miner will calculate the targetDeadline dynamic on poolMining:
-#                            'targetDL = 720 * netDiff / plotSizeInTB' where 'netDiff = 18325193796 / baseTarget'
+#                            'targetDL = 720 * netDiff / plotSizeInTiB' where 'netDiff = 18325193796 / baseTarget'
 # -----------------------------------------------------------------------------------
 poolMining=
 
@@ -147,8 +147,8 @@ deviceId=
 #                      (it may happen that miningInfo changes, and changes back later)
 #
 # connectionTimeout  - increase the 'connectionTimeout' on network problems.
-# (default:12000)      this timeout is used for all network requests.
-#                      if you use pool or online-wallet, the 12 sec. default may
+# (default:18000)      this timeout is used for all network requests.
+#                      if you use pool or online-wallet, the 18 sec. default may
 #                      cause timeout on committing nonces or getting mining info etc.
 #
 # debug              - setting 'debug' to true will log additional information of the mining process,
@@ -167,7 +167,7 @@ deviceId=
 # -----------------------------------------------------------------------------------
 refreshInterval=2000
 updateMiningInfo=true
-connectionTimeout=12000
+connectionTimeout=18000
 
 debug=
 writeLogFile=
@@ -199,7 +199,7 @@ showSkippedDeadlines=
 # - MINING ENGINE - MEMORY USAGE ----------------------------------------------------
 # -----------------------------------------------------------------------------------
 # chunkPartNonces - staggerSize defines number of nonces per chunk.
-# (default:320000)  the miner will split chunks in smaller pieces called chunkParts.
+# (default:960000)  the miner will split chunks in smaller pieces called chunkParts.
 #                   this makes sense, to save memory and optimize speed.
 #                   in the best case chunkPart#1 will be checked before chunkPart#2 is
 #                   completely read ... depending on the power of your GPU.
