- #64 Jminer for PoC2 - added pre-fork support for poc2 plotfiles (detected by no staggersize in filename) - updated libs and docs - new version 0.5.0-SNAPSHOT

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -23,6 +23,13 @@
 # -----------------------------------------------------------------------------------
 # NOTICE: your 'jminer.properties' hasn't got to contain all properties listed here
 #         as long there is a default/fallback defined, mentioned in here.
+#
+# POC1 and POC2
+# jminer supports POC2 since version 0.5.x
+# only use one type, POC1 or POC2 on one drive ('plotPath'), mixed will be skipped for now.
+# ensure your POC2 plotfiles do not have staggersize in filename, or they will be treated like POC1.
+# POC1 filename: 'numericAccountId_startNonce_numberOfNonces_staggersize'
+# POC2 filename: 'numericAccountId_startNonce_numberOfNonces'
 # -----------------------------------------------------------------------------------
 
 
@@ -213,3 +220,12 @@ showSkippedDeadlines=
 # -----------------------------------------------------------------------------------
 chunkPartNonces=
 readerThreads=
+
+
+# -----------------------------------------------------------------------------------
+# - POC2 ----------------------------------------------------------------------------
+# -----------------------------------------------------------------------------------
+# poc2ActivationBlockHeight - only adjust if the POC2 release fork gets delayed to a later block
+# (default:500000)
+# -----------------------------------------------------------------------------------
+poc2ActivationBlockHeight=
