- POC2 switch at block 502000 (new default for 'poc2ActivationBlockHeight' property) - tested POC1 in a post-fork environment, and it works like expected. - new version 0.5.1-SNAPSHOT

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -226,6 +226,8 @@ readerThreads=
 # - POC2 ----------------------------------------------------------------------------
 # -----------------------------------------------------------------------------------
 # poc2ActivationBlockHeight - only adjust if the POC2 release fork gets delayed to a later block
-# (default:500000)
+# (default:502000)            'you can test how your setup with current plotfiles would behave
+#                              after the POC2 fork. Just use a blockHeight from the past.
+#                              No deadline will be confirmed! Just to check your read-times, cpu and memory usage.'
 # -----------------------------------------------------------------------------------
 poc2ActivationBlockHeight=
