- #68 Jminer 5.1 reports duplicate plot file - bugfixes - replaced 'get mining info' errors with connection 'quality' info ... errors will only show up with debug enabled - some minor bugfixes - new version 0.5.2-RELEASE

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>burstcoin</groupId>
   <artifactId>burstcoin-jminer</artifactId>
-  <version>0.5.1-SNAPSHOT</version>
+  <version>0.5.2-RELEASE</version>
   <packaging>jar</packaging>
 
   <name>burstcoin-jminer</name>
