- #72 jminer crashes if a plot file is actively being plotted - #73 listPlotFiles=true does not always show list - prevent concurrent modification while creating real capacity lookup - ensure lowestCommitted does not get updated with higher committed deadline due to bad timing - removed obsolete properties triggerServer, recommitDeadlines, poc2ActivationBlockHeight - some code cleanup and update to latest libs - new version 0.5.3-SNAPSHOT

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -5,7 +5,7 @@
 # (openCL will also work with CPU in needed)
 #
 # Requirements:
-# - Java8 (64bit recommend to use more memory) DO NOT USE Java9!
+# - Java8 (64bit recommend to use more memory) DO NOT USE Java9/10!
 # - openCL
 #
 # PLEASE DONATE
@@ -24,10 +24,8 @@
 # NOTICE: your 'jminer.properties' hasn't got to contain all properties listed here
 #         as long there is a default/fallback defined, mentioned in here.
 #
-# POC1 and POC2
-# jminer supports POC2 since version 0.5.x
-# only use one type, POC1 or POC2 on one drive ('plotPath'), mixed will be skipped for now.
-# ensure your POC2 plotfiles do not have staggersize in filename, or they will be treated like POC1.
+# POC1 and POC2 -> jminer still supports POC1
+# only use one type, POC1 or POC2 on one drive ('plotPath'), mixed will be skipped.
 # POC1 filename: 'numericAccountId_startNonce_numberOfNonces_staggersize'
 # POC2 filename: 'numericAccountId_startNonce_numberOfNonces'
 # -----------------------------------------------------------------------------------
@@ -66,6 +64,7 @@ listPlotFiles=
 # dynamicTargetDeadline    - 'true' will overrule 'targetDeadline' and 'forceLocalTargetDeadline' settings.
 # (default:false)            the miner will calculate the targetDeadline dynamic on poolMining:
 #                            'targetDL = 720 * netDiff / plotSizeInTiB' where 'netDiff = 18325193796 / baseTarget'
+#                            as suggested by pocc pools.
 # -----------------------------------------------------------------------------------
 poolMining=
 
@@ -100,7 +99,7 @@ numericAccountId=xxxxxxxxxxxxxxx
 poolServer=http://pool.com
 
 # Winner
-walletServer=https://wallet.burst-team.us
+walletServer=https://wallet3.burst-team.us:2083
 winnerRetriesOnAsync=
 winnerRetryIntervalInMs=
 
@@ -113,18 +112,9 @@ winnerRetryIntervalInMs=
 #
 # passPhrase              - secretPhrase/password of solo mining burst-account
 # (required for solo)
-#
-# triggerServer           - emulates open wallet, to prevent it from
-# (default: false)          falling asleep (not sure if needed at all)
-#
-# recommitDeadlines       - recommits deadlines below 1200 3 times in a interval of 5 sec.
-# (default: false)          experimental feature to increase chance that deadline gets propagated
-#                           e.g. on short disconnect or connected peers busy etc.
 # -----------------------------------------------------------------------------------
 soloServer=http://localhost:8125
 passPhrase=xxxxxxxxxxxxxx
-triggerServer=
-recommitDeadlines=
 
 # -----------------------------------------------------------------------------------
 # - OpenCL -----------------------------------------------------------------------------
@@ -168,8 +158,8 @@ deviceId=
 # (default:log/jminer.log.txt)
 #
 # logPatternConsole  - only needed if you want to configure your own log pattern e.g.:
-# logPatternFile       %blue(%d{HH:mm:ss.SSS}) %green(%msg%n)
-#                      would only show colored time and message
+# logPatternFile       logPatternConsole=%-5level- %d{HH:mm:ss} | %msg%n
+# (default logback)    would only show logLevel, time and message
 #                      Docs: https://logback.qos.ch/manual/layouts.html#ClassicPatternLayout
 # -----------------------------------------------------------------------------------
 refreshInterval=2000
@@ -179,7 +169,7 @@ connectionTimeout=18000
 debug=
 writeLogFile=
 logFilePath=
-logPatternConsole=
+logPatternConsole=%-5level%d{HH:mm:ss} | %msg%n
 logPatternFile=
 
 # -----------------------------------------------------------------------------------
@@ -220,14 +210,3 @@ showSkippedDeadlines=
 # -----------------------------------------------------------------------------------
 chunkPartNonces=
 readerThreads=
-
-
-# -----------------------------------------------------------------------------------
-# - POC2 ----------------------------------------------------------------------------
-# -----------------------------------------------------------------------------------
-# poc2ActivationBlockHeight - only adjust if the POC2 release fork gets delayed to a later block
-# (default:502000)            'you can test how your setup with current plotfiles would behave
-#                              after the POC2 fork. Just use a blockHeight from the past.
-#                              No deadline will be confirmed! Just to check your read-times, cpu and memory usage.'
-# -----------------------------------------------------------------------------------
-poc2ActivationBlockHeight=
