--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>burstcoin</groupId>
   <artifactId>burstcoin-jminer</artifactId>
-  <version>0.5.2-RELEASE</version>
+  <version>0.5.3-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>burstcoin-jminer</name>
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.0.2.RELEASE</version>
+    <version>2.0.3.RELEASE</version>
     <relativePath/>
   </parent>
 
@@ -24,7 +24,7 @@
     <java.version>1.8</java.version>
     <jocl-blast.version>1.3.0</jocl-blast.version>
     <saphir-hash.version>3.0.3</saphir-hash.version>
-    <bcprov-jdk15on.version>1.59</bcprov-jdk15on.version>
+    <bcprov-jdk15on.version>1.60</bcprov-jdk15on.version>
 
     <!-- only needed for older gpu -->
     <!--<jocl.version>0.1.9</jocl.version>-->
