Shabal Library integration

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -130,6 +130,7 @@ passPhrase=xxxxxxxxxxxxxx
 # deviceId       - specifies the device used by OCLCecker, can be your first GPU,
 # (default:0)      in most cases it will not be 100% used. (depends on capacity)
 # -----------------------------------------------------------------------------------
+useOpenCl=false
 platformId=
 deviceId=
 
