--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,13 @@
       <artifactId>jackson-annotations</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>net.java.dev.jna</groupId>
+      <artifactId>jna</artifactId>
+      <version>5.2.0</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
@@ -141,6 +148,7 @@
             <configuration>
               <target>
                 <copy file="${project.basedir}/target/${project.build.finalName}.jar" tofile="${project.basedir}/dist/tmp/${project.build.finalName}.jar"/>
+                <copy file="${project.basedir}/lib/shabal_lib.dll" tofile="${project.basedir}/dist/tmp/shabal_lib.dll"/>
                 <copy file="${project.basedir}/jminer.default.properties" tofile="${project.basedir}/dist/tmp/jminer.properties"/>
                 <copy file="${project.basedir}/LICENSE.md" tofile="${project.basedir}/dist/tmp/LICENSE.txt"/>
                 <copy file="${project.basedir}/README.md" tofile="${project.basedir}/dist/tmp/README.txt"/>
