- CPU only mode now possible without openCL (Thanks @harry1453) - added multi thread usage of ShabalLibrary if openCL disabled   (https://github.com/burst-apps-team/libShabal) - some cleanup - updated lib versions - new version 0.6.0

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -2,7 +2,7 @@
 # - BURSTCOIN JMINER --------- THIS IS EXPERIMENTAL SOFTWARE, USE ON YOUR OWN RISK! -
 # -----------------------------------------------------------------------------------
 # jminer is a PoC (Proof of Capacity) miner with GPU support for Burstcoin (BURST)
-# (openCL will also work with CPU in needed)
+# (openCL will also work with CPU if needed, alternative openCL can be disabled.)
 #
 # Requirements:
 # - Java8 (64bit recommend to use more memory) DO NOT USE Java9/10!
@@ -93,7 +93,7 @@ dynamicTargetDeadline=
 # winnerRetriesOnAsync    - number of retries to get winner from walletServer
 # (default:4)
 # winnerRetryIntervalInMs - time to wait until next retry to get winner from walletServer
-# (default:500)
+# (default:4000)
 # -----------------------------------------------------------------------------------
 numericAccountId=xxxxxxxxxxxxxxx
 poolServer=http://pool.com
@@ -124,13 +124,16 @@ passPhrase=xxxxxxxxxxxxxx
 # https://github.com/bhamon/gpuPlotGenerator/blob/master/README.md
 # You could also use that instruction to find your platformId and deviceId if needed.
 #
+# useOpenCl      - disable (useOpenCl=false) to only use CPU for mining. Thanks harry1453!
+# (default:true)   Following settings are only relevant if openCL is used.
+#
 # platformId     - id of openCL platform on your system. one platform may have multiple
 # (default:0)      devices, the miner currently uses just one (in general not the bottleneck)
 #
 # deviceId       - specifies the device used by OCLCecker, can be your first GPU,
 # (default:0)      in most cases it will not be 100% used. (depends on capacity)
 # -----------------------------------------------------------------------------------
-useOpenCl=true
+useOpenCl=
 platformId=
 deviceId=
 
@@ -203,6 +206,7 @@ showSkippedDeadlines=
 #                   completely read ... depending on the power of your GPU.
 #                   if staggersize is smaller than chunkPartNonces, staggersize will be used.
 #                   e.g. play with +/- 160000 steps
+#                   (value will be divided by 10 for CPU only mining!)
 #
 # readerThreads   - normally '0' means, the miner takes one thread per drive (plotPath) this is recommend.
 # (default:0)       choosing a other number of 'readerThreads' can be useful on memory issues.
